<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                tools:context=".ui.LoginActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:orientation="vertical"
                  android:id="@+id/loginView">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="10dp">
                <EditText android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:hint="e-mail"
                          android:textAlignment="center"
                          android:id="@+id/emailEditText"
                          android:layout_gravity="center_horizontal"
                          android:textColorHint="@color/colorPrimary"
                          android:textColor="@color/colorPrimary"
                />
                <EditText android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:hint="personal access token"
                          android:textColorHint="@color/colorPrimary"
                          android:textColor="@color/colorPrimary"
                          android:textAlignment="center"
                          android:inputType="textPassword"
                          android:id="@+id/passwordEditText"
                          android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:id="@+id/loginButton"
                    android:text="login"
                    android:textColor="@color/colorPrimary"
            ></Button>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBar"
                 android:layout_centerInParent="true"
                 android:visibility="gone"
    />
</RelativeLayout>